--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
 
   <div class="game-links">
     <!-- Box for "Tollan Worlds" -->
-    <a class="game-link" href="https://play.tollan.io/">
+    <a class="game-link" href="https://play.tollan.io/" target="_blank">
       <img src="images/icons8-t-64.png" alt="Tollan Worlds Logo" />
       <span class="game-title">Tollan Worlds</span>
       <span class="arrow">&#9654;</span>
     </a>
 
     <!-- Box for "Pirate Nation" -->
-    <a class="game-link" href="https://piratenation.game/demo">
+    <a class="game-link" href="https://piratenation.game/demo" target="_blank">
       <img src="images/icons8-pirate-100.png" alt="Pirate Nation Logo" />
       <span class="game-title">Pirate Nation</span>
       <span class="arrow">&#9654;</span>
