--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       align-items: center;
       /* Placeholder for background image */
       /* Replace 'background.jpg' with your actual file/path */
-      background: url("images/hubble.jpg") no-repeat center center / cover;
+      background: url("images/2025-02-Offchain Labs-Game-01-v1.png") no-repeat center center / cover;
       /* Gradient:
          background: radial-gradient(circle at center, #0025ff, #f25b00 80%); 
       */
