--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <title></title>
   <style>
     /* Reset some default browser styles (optional) */
     * {
