--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title></title>
+  <title>Arbitrum Arcade</title>
   <style>
     /* Reset some default browser styles (optional) */
     * {
@@ -84,7 +84,7 @@
 </head>
 <body>
 
-  <h1>Arbitrum Arcade</h1>
+  <h1></h1>
 
   <div class="game-links">
     <!-- Box for "Tollan Worlds" -->
