--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
       background-color: rgba(3, 195, 54, 0.5); /* hover effect */
     }
 
+    /* The images */
+    .game-link img {
+      width: 500px; /* Adjust as needed */
+      height: auto;
+      display: block; /* ensures the image is treated like a block within the link */
+    }
+
     /* Game name text */
     .game-title {
       font-size: 1.2rem;
